--- a/Data Cleaning.Rmd
+++ b/Data Cleaning.Rmd
@@ -71,13 +71,76 @@ train = sample(1:nrow(cleaned.data), 150000)
 train.set = cleaned.data[train,]
 test.set = cleaned.data[-train,]
 rf = randomForest(cleaned.rating~., train.set, do.trace=T,sampsize = 20000, ntree=100)
+rf
 ```
 
 Boosted Trees:
 ```{r}
 boost = gbm(cleaned.rating~., train.set, distribution = "gaussian", n.trees = 1000, shrinkage = 0.01,interaction.depth = 4, verbose = T)
-test <- predict(boost, test.set, n.trees = 1000)
-mean((test-ts$ratings)^2)
+boost.pred <- predict(boost, test.set, n.trees = 1000)
+mean((boost.pred - test.set$cleaned.rating)^2)
+summary(boost)
+```
+
+Special Random Forest:
+```{r}
+set.seed(123)
+size <- sample(1:nrow(cleaned.training),100000)
+train.data = cleaned.data[size,]
+test.data = cleaned.data[-size,]
+
+trainIndices <- c()
+train <- c()
+rfs <- c()
+testIndices <- c()
+test <- c()
+preds <- c()
+rmse <- c()
+
+for(i in 1:50){
+  trainIndices <- which(train.data$Artist==i-1)
+  train <- train.data[trainIndices,]
+  set.seed(123)
+  rfs <- randomForest(train$cleaned.rating~., train, 
+                      ntree=100, nodesize=10, importance=T)
+  testIndices <- which(test.data$Artist==i-1)
+  test <- test.data[testIndices,]
+  preds <- predict(rfs, test)
+  rmse[i] <- sqrt(mean(preds-test$cleaned.rating)^2)
+}
+
+```
+
+
+EDA:
+```{r}
+masterData <- cleaned.data
+masterData <- masterData[,-c(8:88, 94:114)]
+
+artistMean <- aggregate(cleaned.rating~Artist, data=masterData, FUN="mean")
+
+library(ggplot2)
+artistRating <- data.frame(x=seq(0,49,1), y=round(artistMean$cleaned.rating,0))
+
+ggplot(data=artistRating, aes(x=x, y=y)) + 
+  geom_bar(stat="identity", fill="steelblue")+
+  geom_text(aes(label=y), vjust=2.6, color="white", size=3.5) +
+  geom_text(aes(label=x), vjust=-0.5, color="red", size=3.5) +
+  xlab("Artist Id") + ylab("Average rating for all tracks") +
+  ggtitle("Average ratings of artists") + theme_minimal() 
+
+
+
+
+regionArtist <- aggregate(cleaned.rating~Artist+REGION, 
+                          data=masterData, FUN="mean")
+regionArt <- with(regionArtist, regionArtist[order(REGION, -cleaned.rating),])
+
+regionRating <- data.frame(x=regionArt$REGION, 
+                           y=round(regionArt$cleaned.rating,0), 
+                           z=regionArt$Artist)
+regionRating <- regionRating[c(2:4,10:12,56:58,106:108,159:161),]
+regionRating <- data.frame(w=as.factor(c(rep(seq(1:3)))), regionRating)
 ```
 
 
